# SorodidPit

./: .gitignore  .hgignore  CMakeLists.txt  ColorTest.cc  Makefile  conanfile.txt  main.cpp  resources.rc
